--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
   "cSpell.words": ["edgechain"],
-  "git.ignoreLimitWarning": true
+  "git.ignoreLimitWarning": true,
+  "solidity.compileUsingRemoteVersion": "v0.8.20+commit.a1b79de6"
 }
